--- a/demo3.html
+++ b/demo3.html
@@ -11,9 +11,9 @@
 			<td width="15%" bgcolor="blue"></td>
 			<td align="center">
 				<font color="blue">
-				<img src="D:\New folder\Ex\logosmall2.gif">
+				<img src="Ex\logosmall2.gif">
 				<br>
-				<img src="D:\New folder\Ex\B340.gif">
+				<img src="Ex\B340.gif">
 				<br>
 				Who says nothing is <b>FREE?</b>
 				<br>
@@ -46,10 +46,10 @@
 				<table width="80%">
 					<tr>
 						<td align="center">
-							<img src="D:\New folder\Ex\LOGON.gif">
+							<img src="Ex\LOGON.gif">
 						</td>
 						<td align="center">
-							<img src="D:\New folder\Ex\Join.gif">
+							<img src="Ex\Join.gif">
 						</td>
 					</tr>
 					<tr>
@@ -82,13 +82,13 @@
 				<table width="100%">
 					<tr align="center">
 						<td>
-							<img src="D:\New folder\Ex\dietbutton.gif">
+							<img src="Ex\dietbutton.gif">
 						</td>
 						<td>
-							<img src="D:\New folder\Ex\chatbutton.gif">
+							<img src="Ex\chatbutton.gif">
 						</td>
 						<td>
-							<img src="D:\New folder\Ex\singlesbut.gif">
+							<img src="Ex\singlesbut.gif">
 						</td>
 					</tr>
 				</table>
