--- a/demo3.html
+++ b/demo3.html
@@ -13,7 +13,7 @@
 				<font color="blue">
 				<img src="Ex\logosmall2.gif">
 				<br>
-				<img src="Ex\B340.gif">
+				<img src="Ex\B340.GIF">
 				<br>
 				Who says nothing is <b>FREE?</b>
 				<br>
@@ -46,10 +46,10 @@
 				<table width="80%">
 					<tr>
 						<td align="center">
-							<img src="Ex\LOGON.gif">
+							<img src="Ex\LOGON.GIF">
 						</td>
 						<td align="center">
-							<img src="Ex\Join.gif">
+							<img src="Ex\Join.GIF">
 						</td>
 					</tr>
 					<tr>
