--- a/demo3.html
+++ b/demo3.html
@@ -13,7 +13,7 @@
 				<font color="blue">
 				<img src="Ex\logosmall2.gif">
 				<br>
-				<img src="Ex\B340.GIF">
+				<img src="Ex\green_ball.gif">
 				<br>
 				Who says nothing is <b>FREE?</b>
 				<br>
