--- a/demo3.html
+++ b/demo3.html
@@ -49,7 +49,7 @@
 							<img src="Ex\LOGON.GIF">
 						</td>
 						<td align="center">
-							<img src="Ex\Join.GIF">
+							<img src="Ex\JOIN.GIF">
 						</td>
 					</tr>
 					<tr>
